# stck

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  USAGE.md  bug-report.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
Formula/: stck.rb
docs/: release-homebrew.md  sync-recovery.md
scripts/: package-release.sh
src/: cli.rs  commands.rs  env.rs  github.rs  gitops.rs  lib.rs  main.rs  stack.rs  sync_state.rs  util.rs
tests/: cli.rs  cli_skeleton.rs  new.rs  push.rs  real_git.rs  status.rs  submit.rs  sync.rs
tests/harness/: mod.rs
