[package]
name = "stck"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.14.0"
